Change the structure of the config file
更改配置文件结构，使其更合理。

--- a/BDSLM/config.json
+++ b/BDSLM/config.json
@@ -1,6 +1,10 @@
 {
-    "port": 5000,
-    "maxZoomLevel": -2,
-    "minZoomLevel": 4,
-    "mapTitle": "default"
+    "webserver": {
+        "port": 5000,
+        "mapTitle": "default"
+    },
+    "mapRender": {
+        "maxZoomLevel": -2,
+        "minZoomLevel": 4 
+    }
 }
