Auto rend support
新增了自动更新地图渲染的功能。

--- a/BDSLM/config.json
+++ b/BDSLM/config.json
@@ -6,5 +6,9 @@
     "mapRender": {
         "maxZoomLevel": -2,
         "minZoomLevel": 4 
+    },
+    "autoRend":{
+        "enable": true,
+        "cycle": 30
     }
 }
